--- a/css/app.css
+++ b/css/app.css
@@ -77,7 +77,7 @@ section#header .header-title {
 section#hero {
 	background-image:linear-gradient(61.8deg, #F8BBD0, #F48FB1);
 	color: #212121;
-	padding-top: 77px;
+	/* padding-top: 77px; */
 	min-height: 38.2vh
 }
 section#hero .geometric-shape img {
@@ -86,7 +86,7 @@ section#hero .geometric-shape img {
 }
 
 section#hero .hero-title {
-	margin-top: -1rem;
+	/* margin-top: -1rem; */
 }
 /*bmi calculator*/
 section#services {
